# SmartScreen

./: .gitignore  README.md  angular.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: appconfig.ts  index.html  main.ts  storage-keys.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backlight.rs  lib.rs  main.rs  night_light.rs  types.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/assets/: output.css
src/home/: home.component.html  home.component.ts
src/navbar/: navbar.component.html  navbar.component.ts
src/preferences/: preferences.component.html  preferences.component.ts
src/services/: history.service.ts  storage.service.ts
src/subapp/: subapp.component.html  subapp.component.spec.ts  subapp.component.ts
src/uuid-generator/: uuid-generator.component.html  uuid-generator.component.spec.ts  uuid-generator.component.ts
